--- a/Crochet/Crochet/Views/Stitches/TripleStitch.cshtml
+++ b/Crochet/Crochet/Views/Stitches/TripleStitch.cshtml
@@ -12,3 +12,7 @@
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/CBMmiMMtx6o"></iframe>
 </p>
+
+<div class="text-center">
+    <a asp-controller="Stitches" asp-action="Index">Back</a>
+</div>
