--- a/Crochet/Crochet/Views/Stitches/DoubleStitch.cshtml
+++ b/Crochet/Crochet/Views/Stitches/DoubleStitch.cshtml
@@ -13,3 +13,7 @@
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/UyTpL2ylNQw"></iframe>
 </p>
+
+<div class="text-center">
+    <a asp-controller="Stitches" asp-action="Index">Back</a>
+</div>
