--- a/Crochet/Crochet/Views/Stitches/Index.cshtml
+++ b/Crochet/Crochet/Views/Stitches/Index.cshtml
@@ -1,1 +1,20 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Stitches";
+}
+
+<div class="text-center">
+    <h1>Basic Stitches</h1>
+    <p>
+        Want to learn how to crochet, but don't know where to start? Well, you came to the 
+        right place! Here, you can learn the basic stitches, including:
+    </p>
+</div>
+<p>
+    <ul>
+        <li><a asp-controller="Stitches" asp-action="ChainStitch">Chain</a></li>
+        <li><a asp-controller="Stitches" asp-action="SingleStitch">Single Stitch</a></li>
+        <li><a asp-controller="Stitches" asp-action="HalfDoubleStitch">Half Double Stitch</a></li>
+        <li><a asp-controller="Stitches" asp-action="DoubleStitch">Double Stitch</a></li>
+        <li><a asp-controller="Stitches" asp-action="TripleStitch">Triple Stitch</a></li>
+    </ul>
+</p>
