--- a/Crochet/Crochet/Views/Stitches/SingleStitch.cshtml
+++ b/Crochet/Crochet/Views/Stitches/SingleStitch.cshtml
@@ -11,3 +11,7 @@
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fmcxJuhct00"></iframe>
 </p>
+
+<div class="text-center">
+    <a asp-controller="Stitches" asp-action="Index">Back</a>
+</div>
